--- a/index.html
+++ b/index.html
@@ -25,10 +25,29 @@
 <style>
 *{
     font-family: helvetica;
-    font-size: 24px;
+    font-size: 50px;
     background-color: orange;
+    margin: 0 auto;
+    text-align: center;
 }
 
+body {
+    margin-top: 40vh;
+}
+
+a:link {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    text-decoration: line-through;
+}
+
+a:visited {
+    text-decoration: none;
+    color: black;
+}
 
     </style>
 </html>
