--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Work</title>
         <meta name="description" content="">
+        <link rel="shortcut icon" href="favicon.png">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" type="text/css" href=""> 
         <link rel="shortcut icon" href="" type="image/x-icon">
@@ -13,12 +14,15 @@
 
 <body>
 
+<div id="links">
     <a href="CONSUMERISM/index.html">CONSUMERISM</a> <br>
 
     <a href="CLOCK/myCanvas/index.html">CLOCK</a> <br>
 
-    <a href="GEMSFINAL/examples/webgl_loader_gems.html">BIRTH STONE GUIDE</a> <br>
+    <a href="homewithyou/object_builder.html">HOME WITH YOU</a> <br>
 
+    <a href="GEMSFINAL/examples/webgl_loader_gems.html">BIRTH STONE GUIDE</a> <br>
+</div>
 
 </body>
 
@@ -31,8 +35,12 @@
     text-align: center;
 }
 
-body {
-    margin-top: 40vh;
+#links {
+    margin: 0 auto;
+    position: absolute;
+      top: 50%;
+  left: 50%;
+  transform: translate(-50%, -60%);
 }
 
 a:link {
