--- a/SITE/examples/test.html
+++ b/SITE/examples/test.html
@@ -46,8 +46,8 @@
 
 			let camera, scene, renderer;
 
-			let mouseX = 0;
-			let mouseY = 0;
+			// let mouseX = 0;
+			// let mouseY = 0;
 
 			let windowHalfX = window.innerWidth / 2;
 			let windowHalfY = window.innerHeight / 2;
