--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <a href="GEMSFINAL/examples/webgl_loader_gems.html">BIRTH STONE GUIDE</a> <br>
 
-    <a href="SITE/examples/test.html">secret</a> <br>
+    <a href="SITE/examples/index.html">secret</a> <br>
 </div>
 
 </body>
