--- a/SITE/examples/index.html
+++ b/SITE/examples/index.html
@@ -30,9 +30,7 @@
 
 <div id="user-side">
 		<div id="title">
-			mari <br>
-			al- <br>
-			midhadi
+			mari al-midhadi
 		</div>
 
 	<a href="contact/"><button type="button" id="bt1">contact</button></a>
