--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 *{
     font-family: helvetica;
     font-size: 50px;
-    background-color: orange;
     margin: 0 auto;
     text-align: center;
 }
@@ -43,6 +42,14 @@
       top: 50%;
   left: 50%;
   transform: translate(-50%, -60%);
+}
+
+html {
+  background: url(images/5.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 a:link {
