--- a/SITE/examples/funtime/index.html
+++ b/SITE/examples/funtime/index.html
@@ -17,9 +17,7 @@
 
         <div id="title">
         <a href="../index.html">
-            mari <br>
-            al- <br>
-            midhadi
+            mari al-midhadi
         </a>
         </div>
 
