--- a/SITE/examples/work/index.html
+++ b/SITE/examples/work/index.html
@@ -40,9 +40,7 @@
 
         <div id="title">
         <a href="../index.html">
-            mari <br>
-            al- <br>
-            midhadi
+            mari al-midhadi
         </a>
         </div>
 
