--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Work</title>
+        <title>:) :( :) :( </title>
         <meta name="description" content="">
         <link rel="shortcut icon" href="favicon.png">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" type="text/css" href=""> 
         <link rel="shortcut icon" href="" type="image/x-icon">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script>msg = ":) :( :) :(";
+msg = " :) :( :) :(" + msg;position = 0;
+function scrolltitle() {
+document.title = msg.substring(position, msg.length) + msg.substring(0, position); position++;
+if (position > msg.length) position = 0
+window.setTimeout("scrolltitle()",170);
+}
+scrolltitle();</script>
     </head>
 
 <body>
