--- a/BWD/blog.html
+++ b/BWD/blog.html
@@ -23,6 +23,18 @@
     </div>
 
 
+<!-- COLOR CHANGE PANEL -->
+<div class="color-panel">
+    <div id="color1"></div>
+    <div id="color2"></div>
+    <div id="color3"></div>
+    <div id="color4"></div>
+
+</div>
+
+
+<!-- MENU -->
+
 <div class="menu">
     <img src="images/cursor.png" id="menu-image">
         <div id="hidden-menu">
