--- a/BWD/index.html
+++ b/BWD/index.html
@@ -20,7 +20,7 @@
 
 
     <div class="title-tab">
-        <h1>bad web design™</h1>
+        <h1 style="font-size: 4vw">bad web design™</h1>
 
         <div class="about-page">
         
