--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ scrolltitle();</script>
 
     <a href="GEMSFINAL/examples/webgl_loader_gems.html">BIRTH STONE GUIDE</a> <br>
 
-    <a href="FIRE_ESCAPE/index.html">FIRE ESCAPE</a> <br>
+    <a href="FIRE_ESCAPE/enter.html">FIRE ESCAPE</a> <br>
 
     <a href="SITE/examples/index.html">secret</a> <br>
 </div>
