--- a/FIRE_ESCAPE/enter.html
+++ b/FIRE_ESCAPE/enter.html
@@ -3,16 +3,102 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>FIRE ESCAPE</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" type="text/css" href=""> 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-        <link rel="shortcut icon" href="favicon.gif" type="image/x-icon">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="js/title-scroll-master/title-scroll.js" data-start="5000" data-speed="250"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     </head>
 
 <body>
 
+<div id="enter">
+    <a href="index.html"><h3> enter </h3></a>
+</div>
+
+
+
 </body>
+
+
+<style>
+
+    #enter {
+    border: 2px solid black;
+    border-radius: 50%;
+    display: block;
+    width: 200px;
+    height: 100px;
+    text-align: center;
+    margin: 0, auto;
+    position: fixed;
+    z-index: 10;
+    left: 90vw;
+    top: 5vh;
+  animation: wiggle 2.5s infinite;
+  animation-direction: alternate;
+  left: 45vw;
+  top: 45vh;
+  box-sizing: border-box;
+}
+
+a:visited {
+    text-decoration: none;
+    color: black;
+}
+
+a:link {
+    text-decoration: none;
+    color: black;
+    font-family: agrandir-bold;
+}
+
+a:active {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    text-decoration: none;
+    color: black;
+}
+
+
+#enter:hover {
+    box-shadow:  0 0 1em pink, 0 0 0.2em pink;
+    outline-width: 0;
+    cursor: pointer;
+    animation: none;
+
+}
+
+h3 {
+
+    font-family: agrandir-bold;
+    font-size: 52px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+@keyframes wiggle {
+    0% { transform: rotate(0deg); scale: 1.5;  }
+   25% { transform: rotate(78deg); scale: 2;  left: 10vw; top: 80vh;}
+   50% { transform: rotate(1890deg); scale: 1; left: 30vw; top: 30vh;}
+   75% { transform: rotate(180deg); scale: 0.2; left: 60vw; top: 20vh;}
+  100% { transform: rotate(0deg); scale: 1; }
+}
+
+
+
+@font-face {
+    font-family: "agrandir-bold";
+    src: url("fonts/Agrandir-TextBold.otf") format("opentype"), 
+    url("fonts/Agrandir-TextBold.ttf")  format("truetype"),
+    url("fonts/Agrandir-TextBold.woff2") format("woff2"),
+    url("fonts/Agrandir-TextBold.woff") format("woff");
+}
+</style>
 </html>
