--- a/FIRE_ESCAPE/index.html
+++ b/FIRE_ESCAPE/index.html
@@ -28,11 +28,46 @@
 
     <!-- enter button -->
 <div id="people_watch_btn">
-    <h3> people <br>watch </h3>
+    <h3> drive <br>around </h3>
 </div>
 
-<div class="draggable">
-    <iframe  class="resizable" id="people_watch" src="https://driveandlisten.herokuapp.com/" title="people watch">
+<div id="walk_btn">
+    <h3> walk <br>around </h3>
+</div>
+
+<div id="letter_btn">
+    <h3> write yourself a letter </h3>
+</div>
+
+<div id="letter"> 
+     <form method="post" name="contact_form"
+        action="contact-form-handler.php">
+            Email Address:
+            <input type="text" name="email">
+            Message:
+            <textarea name="message"></textarea>
+            <input type="submit" value="Submit">
+        </form>
+</div>
+
+<div id="thought_btn" onclick="quote()">
+    <h3> thought of the day </h3>
+</div>
+
+        <div id="thought" class="draggable" class="resizable">
+            <h1> Thought of the day: </h1><br>
+            <h3 id="thought_enter"></h3>
+            <button style=" height: 100%; margin-top: 50px;padding: 10px; font-size: 18px; text-align: center; margin: 0 auot; font-family: agrandir-regular;"onclick="quote()">another one </button>
+        </div>
+
+
+<div id="exit">
+    <a href="enter.html"><h3> exit </h3></a>
+</div>
+
+
+<div class="draggable" class="resizable">
+    <iframe  class="draggable" class="resizable"  id="people_watch" src="https://driveandlisten.herokuapp.com/" title="people watch">
         <div class="closeout">X</div>
     </iframe>
 </div>
@@ -52,62 +87,168 @@
 <script>
 
 
+
+
 // -----BLUE SKY ANIMATION -----
 
     // Images asset
-
+// var i;
+// for (i = 0; i < 315; i++) {
+//     const skyImages = {
+//      [i]:"'bluesky/sky_0000" + [i] + ".jpg'",
+// }
 
 const skyImages = {
-    1:'bluesky/sky_00000.jpg',
-    2:'bluesky/sky_00005.jpg',
-    3:'bluesky/sky_00010.jpg',
-    4:'bluesky/sky_00015.jpg',
-    5:'bluesky/sky_00020.jpg',
-    6:'bluesky/sky_00025.jpg',
-    7:'bluesky/sky_00030.jpg',
-    8:'bluesky/sky_00035.jpg',
-    9:'bluesky/sky_00040.jpg',
-    10:'bluesky/sky_00045.jpg',
-    11:'bluesky/sky_00050.jpg',
-    12:'bluesky/sky_00055.jpg',
-    13:'bluesky/sky_00060.jpg',
-    14:'bluesky/sky_00065.jpg',
-    15:'bluesky/sky_00070.jpg',
-    16:'bluesky/sky_00075.jpg',
-    17:'bluesky/sky_00080.jpg',
-    18:'bluesky/sky_00085.jpg',
-    19:'bluesky/sky_00090.jpg',
-    20:'bluesky/sky_00095.jpg',
-    21:'bluesky/sky_00100.jpg',
-    22:'bluesky/sky_00105.jpg',
-    23:'bluesky/sky_00110.jpg',
-    24:'bluesky/sky_00115.jpg',
-    25:'bluesky/sky_00120.jpg',
-    26:'bluesky/sky_00125.jpg',
-    27:'bluesky/sky_00130.jpg',
-    28:'bluesky/sky_00135.jpg',
-    29:'bluesky/sky_00140.jpg',
-    30:'bluesky/sky_00145.jpg',
-    31:'bluesky/sky_00150.jpg',
-    32:'bluesky/sky_00155.jpg',
-    33:'bluesky/sky_00160.jpg',
-    34:'bluesky/sky_00165.jpg',
-    35:'bluesky/sky_00170.jpg',
-    36:'bluesky/sky_00175.jpg',
-    37:'bluesky/sky_00180.jpg',
-    38:'bluesky/sky_00185.jpg',
-    39:'bluesky/sky_00190.jpg',
-    40:'bluesky/sky_00195.jpg',
-    41:'bluesky/sky_00200.jpg',
-    42:'bluesky/sky_00205.jpg',
-    43:'bluesky/sky_00210.jpg',
-    44:'bluesky/sky_00215.jpg',
-    45:'bluesky/sky_00220.jpg',
-    46:'bluesky/sky_00225.jpg',
-    47:'bluesky/sky_00230.jpg',
-    48:'bluesky/sky_00235.jpg',
-    49:'bluesky/sky_00240.jpg',
-    50:'bluesky/sky_00245.jpg',
+    1:'bluesky/sky_00001.jpg',
+    2:'bluesky/sky_00002.jpg',
+    3:'bluesky/sky_00003.jpg',
+    4:'bluesky/sky_00004.jpg',
+    5:'bluesky/sky_00005.jpg',
+    6:'bluesky/sky_00006.jpg',
+    7:'bluesky/sky_00007.jpg',
+    8:'bluesky/sky_00008.jpg',
+    9:'bluesky/sky_00009.jpg',
+    10:'bluesky/sky_00010.jpg',
+    11:'bluesky/sky_00011.jpg',
+    12:'bluesky/sky_00012.jpg',
+    13:'bluesky/sky_00013.jpg',
+    14:'bluesky/sky_00014.jpg',
+    15:'bluesky/sky_00015.jpg',
+    16:'bluesky/sky_00016.jpg',
+    17:'bluesky/sky_00017.jpg',
+    18:'bluesky/sky_00018.jpg',
+    19:'bluesky/sky_00019.jpg',
+    20:'bluesky/sky_00020.jpg',
+    21:'bluesky/sky_00021.jpg',
+    22:'bluesky/sky_00022.jpg',
+    23:'bluesky/sky_00023.jpg',
+    24:'bluesky/sky_00024.jpg',
+    25:'bluesky/sky_00025.jpg',
+    26:'bluesky/sky_00026.jpg',
+    27:'bluesky/sky_00027.jpg',
+    28:'bluesky/sky_00028.jpg',
+    29:'bluesky/sky_00029.jpg',
+    30:'bluesky/sky_00030.jpg',
+    31:'bluesky/sky_00031.jpg',
+    32:'bluesky/sky_00032.jpg',
+    33:'bluesky/sky_00033.jpg',
+    34:'bluesky/sky_00034.jpg',
+    35:'bluesky/sky_00035.jpg',
+    36:'bluesky/sky_00036.jpg',
+    37:'bluesky/sky_00037.jpg',
+    38:'bluesky/sky_00038.jpg',
+    39:'bluesky/sky_00039.jpg',
+    40:'bluesky/sky_00040.jpg',
+    41:'bluesky/sky_00041.jpg',
+    42:'bluesky/sky_00042.jpg',
+    43:'bluesky/sky_00043.jpg',
+    44:'bluesky/sky_00044.jpg',
+    45:'bluesky/sky_00045.jpg',
+    46:'bluesky/sky_00046.jpg',
+    47:'bluesky/sky_00047.jpg',
+    48:'bluesky/sky_00048.jpg',
+    49:'bluesky/sky_00049.jpg',
+    50:'bluesky/sky_00050.jpg',
+    51:'bluesky/sky_00051.jpg',
+    52:'bluesky/sky_00052.jpg',
+    53:'bluesky/sky_00053.jpg',
+    54:'bluesky/sky_00054.jpg',
+    55:'bluesky/sky_00055.jpg',
+    56:'bluesky/sky_00056.jpg',
+    57:'bluesky/sky_00057.jpg',
+    58:'bluesky/sky_00058.jpg',
+    59:'bluesky/sky_00059.jpg',
+    60:'bluesky/sky_00060.jpg',
+    61:'bluesky/sky_00061.jpg',
+    62:'bluesky/sky_00062.jpg',
+    63:'bluesky/sky_00063.jpg',
+    64:'bluesky/sky_00064.jpg',
+    65:'bluesky/sky_00065.jpg',
+    66:'bluesky/sky_00066.jpg',
+    67:'bluesky/sky_00067.jpg',
+    68:'bluesky/sky_00068.jpg',
+    69:'bluesky/sky_00069.jpg',
+    70:'bluesky/sky_00070.jpg',
+    71:'bluesky/sky_00071.jpg',
+    72:'bluesky/sky_00072.jpg',
+    73:'bluesky/sky_00073.jpg',
+    74:'bluesky/sky_00074.jpg',
+    75:'bluesky/sky_00075.jpg',
+    76:'bluesky/sky_00076.jpg',
+    77:'bluesky/sky_00077.jpg',
+    78:'bluesky/sky_00078.jpg',
+    79:'bluesky/sky_00079.jpg',
+    80:'bluesky/sky_00080.jpg',
+    81:'bluesky/sky_00081.jpg',
+    82:'bluesky/sky_00082.jpg',
+    83:'bluesky/sky_00083.jpg',
+    84:'bluesky/sky_00084.jpg',
+    85:'bluesky/sky_00085.jpg',
+    86:'bluesky/sky_00086.jpg',
+    87:'bluesky/sky_00087.jpg',
+    88:'bluesky/sky_00088.jpg',
+    89:'bluesky/sky_00089.jpg',
+    90:'bluesky/sky_00090.jpg',
+    91:'bluesky/sky_00091.jpg',
+    92:'bluesky/sky_00092.jpg',
+    93:'bluesky/sky_00093.jpg',
+    94:'bluesky/sky_00094.jpg',
+    95:'bluesky/sky_00095.jpg',
+    96:'bluesky/sky_00096.jpg',
+    97:'bluesky/sky_00097.jpg',
+    98:'bluesky/sky_00098.jpg',
+    99:'bluesky/sky_00099.jpg',
+    100:'bluesky/sky_000100.jpg',
+    101:'bluesky/sky_000101.jpg',
+    102:'bluesky/sky_000102.jpg',
+    103:'bluesky/sky_000103.jpg',
+    104:'bluesky/sky_000104.jpg',
+    105:'bluesky/sky_000105.jpg',
+    106:'bluesky/sky_000106.jpg',
+    107:'bluesky/sky_000107.jpg',
+    108:'bluesky/sky_000108.jpg',
+    109:'bluesky/sky_000109.jpg',
+    110:'bluesky/sky_000110.jpg',
+    111:'bluesky/sky_000111.jpg',
+    112:'bluesky/sky_000112.jpg',
+    113:'bluesky/sky_000113.jpg',
+    114:'bluesky/sky_000114.jpg',
+    115:'bluesky/sky_000115.jpg',
+    116:'bluesky/sky_000116.jpg',
+    117:'bluesky/sky_000117.jpg',
+    118:'bluesky/sky_000118.jpg',
+    119:'bluesky/sky_000119.jpg',
+    120:'bluesky/sky_000120.jpg',
+    121:'bluesky/sky_000121.jpg',
+    122:'bluesky/sky_000122.jpg',
+    123:'bluesky/sky_000123.jpg',
+    124:'bluesky/sky_000124.jpg',
+    125:'bluesky/sky_000125.jpg',
+    126:'bluesky/sky_000126.jpg',
+    127:'bluesky/sky_000127.jpg',
+    128:'bluesky/sky_000128.jpg',
+    129:'bluesky/sky_000129.jpg',
+    130:'bluesky/sky_000130.jpg',
+    131:'bluesky/sky_000131.jpg',
+    132:'bluesky/sky_000132.jpg',
+    133:'bluesky/sky_000133.jpg',
+    134:'bluesky/sky_000134.jpg',
+    135:'bluesky/sky_000135.jpg',
+    136:'bluesky/sky_000136.jpg',
+    137:'bluesky/sky_000137.jpg',
+    138:'bluesky/sky_000138.jpg',
+    139:'bluesky/sky_000139.jpg',
+    140:'bluesky/sky_000140.jpg',
+    141:'bluesky/sky_000141.jpg',
+    142:'bluesky/sky_000142.jpg',
+    143:'bluesky/sky_000143.jpg',
+    144:'bluesky/sky_000144.jpg',
+    145:'bluesky/sky_000145.jpg',
+    146:'bluesky/sky_000146.jpg',
+    147:'bluesky/sky_000147.jpg',
+    148:'bluesky/sky_000148.jpg',
+    149:'bluesky/sky_000149.jpg',
+    150:'bluesky/sky_000150.jpg'
 }
 
 
@@ -115,7 +256,7 @@ const skyImages = {
 const step = 30; // For each 30px, change an image
 function trackScrollPosition() {
   const y = window.scrollY;
-  const label = Math.min(Math.floor(y/30) + 1, 50);
+  const label = Math.min(Math.floor(y/30) + 1, 150);
   const imageToUse = skyImages[label];
   // Change the background image
   $('.image-container').css('background-image', `url('${imageToUse}')`);
@@ -125,6 +266,79 @@ $(document).ready(()=>{
     trackScrollPosition();
   })
 })
+
+
+
+
+
+// ----- QUOTES -----
+let quotes = [
+"Act as if what you do makes a difference. It does.", 
+"Success is not final, failure is not fatal: it is the courage to continue that counts.", 
+"Never bend your head. Always hold it high. Look the world straight in the eye.",
+"What you get by achieving your goals is not as important as what you become by achieving your goals.",
+"Believe you can and you're halfway there.",
+"When you have a dream, you've got to grab it and never let go.",
+"Life is like riding a bicycle. To keep your balance, you must keep moving.",
+"You are never too old to set another goal or to dream a new dream.",
+"Try to be a rainbow in someone else's cloud.",
+"Sometimes you will never know the value of a moment, until it becomes a memory.",
+"The most wasted of days is one without laughter.",
+"Stay close to anything that makes you glad you are alive.",
+"You get what you give.",
+"Some people look for a beautiful place. Others make a place beautiful.",
+"Be the change that you wish to see in the world.",
+"If I cannot do great things, I can do small things in a great way.",
+"My mission in life is not merely to survive, but to thrive.",
+"The bad news is time flies. The good news is you're the pilot.",
+"Don't wait. The time will never be just right.",
+"No matter what people tell you, words and ideas can change the world.",
+"A champion is defined not by their wins but by how they can recover when they fall.",
+"Keep your face always toward the sunshine, and shadows will fall behind you."
+];
+
+
+// function randomLine() {
+// let resultsArray = [];
+// for (let i = 0; i < alltexts.length; i++) {
+//     let mytext = alltexts[i];
+//     let lineArray = mytext.split("\n");
+//     let randomMath = Math.floor(Math.random() * (lineArray.length-1));
+//     console.log(randomMath);
+// //  let sentenceArray = mytext.split(". "); // erase this line if you are splitting by line-breaks
+//     //for (let j=0; j < lineArray.length; j++) {
+//         resultsArray.push(lineArray[randomMath]);
+//     //}
+// }
+// printRight(resultsArray);
+// }
+
+function quote() {
+for (let j=0; j<quotes.length; j++) {
+    let randomMath = Math.floor(Math.random() * (quotes.length-1));
+    document.getElementById("thought_enter").innerHTML =
+    "“" + quotes[randomMath] + "”";
+}
+}
+
+
+
+//   var j;
+//     for (j = 0; j < quotes.length; j++) {
+//         document.getElementById("thought_enter").innerHTML =
+//     "“" + quotes[j] + "”";
+// }
+
+
+
+// ----- EMAIL FORM -----
+
+    // var frmvalidator  = new Validator("contactform");
+    // frmvalidator.addValidation("name","req","Please provide your name");
+    // frmvalidator.addValidation("email","req","Please provide your email");
+    // frmvalidator.addValidation("email","email",
+    //   "Please enter a valid email address");
+
 
 
 // ----- NAME INPUT -----
@@ -137,6 +351,15 @@ function welcome() {
     document.getElementById("hello").innerHTML =
 
     "Hi " + name + ", you are on the fire escape."; 
+
+//     input.addEventListener("keyup", function(event) {
+//     if (event.keyCode === 13) {
+//         event.preventDefault();
+//         document.getElementById("name_enter").click();
+//     }
+// });
+
+
 }
 
 
@@ -146,6 +369,14 @@ $('#people_watch_btn').click(function(){
     $('#people_watch').show(300);
 })
 
+$('#thought_btn').click(function(){
+    $('#thought').show(300);
+})
+
+$('#letter_btn').click(function(){
+    $('#letter').show(300);
+})
+
 $('.closeout').click(function(){
     $('#people_watch').hide(300);
 })
@@ -153,6 +384,11 @@ $('.closeout').click(function(){
 $('#name_enter').click(function(){
     $('.name').hide(400);
     $('#people_watch_btn').show(300);
+    $('#walk_btn').show(300);
+    $('#thought_btn').show(300);
+    $('#letter_btn').show(300);
+    $('#exit').show(100);
+
 })
 
 
