--- a/FIRE_ESCAPE/enter.html
+++ b/FIRE_ESCAPE/enter.html
@@ -16,7 +16,7 @@
 <body>
 
 <div id="enter">
-    <a href="index.html"><h3> enter </h3></a>
+    <a href="index.html"><h3 style="text-align: center; margin: 0 auto; box-sizing: border-box; line-height: 90fpx;"> enter </h3></a>
 </div>
 
 
