--- a/FIRE_ESCAPE/index.html
+++ b/FIRE_ESCAPE/index.html
@@ -65,9 +65,9 @@
      <form  method="post" name="contact_form"
         action="mail_handler.php">
             <span style="font-family: agrandir-bold; font-size: 24px;"> Email: <br></span>
-            <input style="width: 95%; height: 50px; font-family: agrandir-regular; font-size: 20px;  border: 2px solid black; border-radius: 20px;" type="text" name="email"><br>
+            <input style="width: 95%; height: 50px; font-family: agrandir-regular; font-size: 20px;  border: 2px solid black; border-radius: 20px;" type="text" name="email"><br><br>
             <span style="font-family: agrandir-bold; font-size: 24px;"> How're you feeling right now? <br> </span>
-            <textarea style="width: 95%; height: 200px;border: 2px solid black;  border-radius: 20px; font-size: 20px; font-family: agrandir-regular" name="message"></textarea><br>
+            <textarea style="width: 95%; height: 200px;border: 2px solid black;  border-radius: 20px; font-size: 20px; font-family: agrandir-regular" name="message"></textarea><br><br>
             <button id="letter_button" type="submit" value="Submit"> Send </button>
         </form>
 </div>
