--- a/FIRE_ESCAPE/index.html
+++ b/FIRE_ESCAPE/index.html
@@ -246,11 +246,12 @@ $('#exit').mouseleave(function(){
 
 
 $('#name_enter').click(function(){
-    $('.name').fadeOut(400);
-    $('#people_watch_btn').fadeIn(300);
-    $('#walk_btn').fadeIn(300);
-    $('#thought_btn').fadeIn(300);
-    $('#letter_btn').fadeIn(300);
+    $('.name').fadeOut(700);
+    $('#hello').fadeIn(800);
+    $('#people_watch_btn').fadeIn(900);
+    $('#walk_btn').fadeIn(1000);
+    $('#thought_btn').fadeIn(1100);
+    $('#letter_btn').fadeIn(1200);
     $('#exit').fadeIn(100);
 
 })
