--- a/FIRE_ESCAPE/index.html
+++ b/FIRE_ESCAPE/index.html
@@ -214,7 +214,7 @@ $('#thought_btn').click(function(){
 
 $('#walk_btn').click(function(){
     $('#walk').css('display', 'block');
-    $("#walk_iframe").attr('src', 'https://citywalks.live/')
+    $("#walk_iframe").attr('src', 'https://citywalks.live/');
 })
 
 $('#letter_btn').click(function(){
