--- a/FIRE_ESCAPE/enter.html
+++ b/FIRE_ESCAPE/enter.html
@@ -11,6 +11,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="js/title-scroll-master/title-scroll.js" data-start="5000" data-speed="250"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-touch-events/1.0.5/jquery.mobile-events.js"></script>
+
     </head>
 
 <body>
@@ -83,6 +85,33 @@ h3 {
     margin: 0 auto;
 }
 
+
+@media (max-width: 700px) { 
+
+
+
+    #enter {
+    border: 2px solid black;
+    border-radius: 50%;
+    display: block;
+    width: 200px;
+    height: 100px;
+    text-align: center;
+    margin: 0, auto;
+    position: fixed;
+    z-index: 10;
+  animation: wiggle 2.5s infinite;
+  animation-direction: alternate;
+  left: 25vw;
+  top: 45vh;
+  box-sizing: border-box;
+}
+
+
+
+
+}
+
 @keyframes wiggle {
     0% { transform: rotate(0deg); scale: 1.5;  }
    25% { transform: rotate(78deg); scale: 2;  left: 10vw; top: 80vh;}
@@ -126,6 +155,15 @@ $('#enter').mouseenter(function(){
 $('#enter').mouseleave(function(){
     $('body').css('background-image', 'none');
 })
+
+
+var smallScreen = window.matchMedia("(max-width: 700px)");
+if (smallScreen.matches){
+  $('#enter').singletap(function(){
+      $('body').css('background-image', 'url("images/sky.gif")');
+  })
+
+}
 
 </script>
 </html>
