--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@ scrolltitle();</script>
     <a href="FIRE_ESCAPE/enter.html">FIRE ESCAPE</a> <br>
 
     <a href="SITE/examples/index.html">secret</a> <br>
+
+    <a href="PORTFOLIO_SITE/examples/index.html">secret2</a> <br>
+
 </div>
 
 </body>
