--- a/PORTFOLIO_SITE/examples/index.html
+++ b/PORTFOLIO_SITE/examples/index.html
@@ -15,7 +15,7 @@
 
 <div id="user-side">
 		<div id="title">
-			mari <br>al-midhadi
+			Mari is an art director and designer <br>based in NYC passionate about pop culture, <br> sustainability and gen-z issues.
 		</div>
 
 	<a href="funtime/"><button type="button" id="bt3">fun time</button></a>
