--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ scrolltitle();</script>
 
     <a href="PORTFOLIO_SITE/examples/index.html">secret2</a> <br>
 
+    <a href="NOTHING/index.html">no</a>
+
 </div>
 
 </body>
