--- a/NOTHING/index.html
+++ b/NOTHING/index.html
@@ -192,7 +192,7 @@ MOVE THE SQUARES OF THE CHECKERBOARD WITH DRAGGABLE
 </div>
 
     
-    <div id="picker" style="margin-bottom: 30vh; /*border-width:1px;*/ width:100%; 
+    <div id="picker" style="margin-bottom: 10vh; border: 1px solid black; width:100vw; 
     bottom: 30px; position: fixed;"></div>
     <br/>
 <!--     <div id="hex"></div>
